完成学生增删查改   大家快点搞呀

--- a/src/main/resources/templates/teacher/admin.html
+++ b/src/main/resources/templates/teacher/admin.html
@@ -51,8 +51,8 @@
             <a>信息录入</a>
             <dl class="layui-nav-child">
               <dd><a id="ccfEvent">考试录入</a></dd>
-              <dd><a id="scoreList">成绩列表</a></dd>
-              <dd><a id="scoreAnalysis">成绩分析</a></dd>
+              <dd><a id="studentEvent">学生录入</a></dd>
+              <dd><a id="gradeEvent">成绩分析</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item ">
