--- a/src/main/resources/templates/teacher/admin.html
+++ b/src/main/resources/templates/teacher/admin.html
@@ -59,7 +59,7 @@
             <a id="scoreCheck">成绩审核</a>
             <dl class="layui-nav-child">
               <dd><a id="">学生个人成绩</a></dd>
-              <dd><a id="">选拔赛成绩</a></dd>
+              <dd><a id="selectEvent">选拔赛成绩</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item ">
