--- a/src/main/resources/templates/association_change_filter.html
+++ b/src/main/resources/templates/association_change_filter.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>修改密码</title>
-    <link rel="stylesheet" href="../static/css/layui.css">
+    <link rel="stylesheet" href="/css/layui.css" media="all">
+    <script src="/layui.js"></script>
+    <script src="/jquery-3.4.1.js"></script>
 </head>
 <body>
 
@@ -12,32 +14,67 @@
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
             <b id="passModifyMess" style="color: red;"></b>
-            <form class="layui-form" action="">
 
+            <form class="layui-form" action="">
                 <div class="layui-form-item">
                     <label class="layui-form-label">公费人数</label>
                     <div class="layui-input-inline">
                         <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
                 </div>
-
                 <div class="layui-form-item">
                     <div class="layui-input-block">
                         <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
-                        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    </div>
+                </div>
+            </form>
+
+            <form class="layui-form" action="">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">前百分比</label>
+                    <div class="layui-input-inline">
+                        <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
+                    </div>
+                </div>
+            </form>
+
+            <form class="layui-form" action="">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">超过平均分</label>
+                    <div class="layui-input-inline">
+                        <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 
-<script src="../static/layui.js"></script>
+
 <script>
     //JavaScript代码区域
     layui.use('element', function(){
         var element = layui.element;
         element.on('nav(test)', function(elem){
             console.log(elem); //得到当前点击的DOM对象
+        });
+    });
+    layui.use('form', function(){
+        var form = layui.form;
+
+        //监听提交
+        form.on('submit(formDemo)', function(data){
+            layer.msg(JSON.stringify(data.field));
+            return false;
         });
     });
 </script>
