--- a/src/main/resources/templates/association_import_scores.html
+++ b/src/main/resources/templates/association_import_scores.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>修改密码</title>
-    <link rel="stylesheet" href="../static/css/layui.css">
+    <link rel="stylesheet" href="/css/layui.css" media="all">
+    <script src="/layui.js"></script>
+    <script src="/jquery-3.4.1.js"></script>
 </head>
 <body>
 
@@ -18,7 +20,157 @@
         </div>
     </div>
 
-<script src="../static/layui.js"></script>
+    <table class="layui-table" id="demo" lay-filter="test"></table>
+    <script type="text/html" id="toolbarDemo">
+        <div class="layui-btn-container">
+            <button class="layui-btn layui-btn-sm layui-btn-normal" lay-event="add">添加</button>
+        </div>
+    </script>
+
+    <script type="text/html" id="barDemo">
+        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    </script>
+    <script>
+        layui.use('table', function () {
+            var table = layui.table;
+            var $ = layui.jquery;
+            var active = {
+                reload: function () {
+                    var demoReload = $('#demoReload');
+
+                    table.reload('testReload', {
+                        where: {
+                            keyword: demoReload.val()
+                        }
+                    });
+                }
+            };
+
+            //监听事件
+            table.on('toolbar(test)', function (obj) {
+                var checkStatus = table.checkStatus(obj.config.id);
+                console.log(obj.config.id.tr);
+                console.log(checkStatus);
+                if (obj.event == "add") {
+                    layer.open({
+                        title: '添加',
+                        type: 1,
+                        content: $('#form1'),
+                    })
+                }
+                ;
+            });
+            //监听工具条
+            table.on('tool(test)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+                var data = obj.data; //获得当前行数据
+                var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+                var tr = obj.tr; //获得当前行 tr 的 DOM 对象（如果有的话）
+                console.log(data);
+                if (layEvent === 'del') { //删除
+                    layer.confirm('确认要删除吗', function (index) {
+                        $.get("/api/json/delete_student?studentId=" + data.studentId, {},
+                            function (response) {
+                                if (response.code == 200) {
+                                    layui.table.reload('testReload');
+                                    //obj.del(); //删除对应行（tr）的DOM结构，并更新缓存
+
+                                    layer.close(index);
+                                    layer.msg("删除成功");
+                                } else {
+                                    layer.close(index);
+                                    layer.msg(response.message);
+                                }
+                            });
+                    });
+                } else if (layEvent === 'edit') { //编辑
+                    //do something
+                    $("#studentId").val(data.studentId);
+                    $("#name").val(data.name);
+                    $("#grades").val(data.grades);
+                    $("#gradesProblem1").val(data.gradesProblem1);
+                    $("#gradesProblem2").val(data.gradesProblem2);
+                    $("#gradesProblem3").val(data.gradesProblem3);
+                    $("#gradesProblem4").val(data.gradesProblem4);
+                    $("#gradesProblem5").val(data.gradesProblem5);
+
+
+                    layer.open({
+                        title: '编辑',
+                        type: 1,
+                        content: $("#form2")
+                    })
+
+                } else if (layEvent === 'LAYTABLE_TIPS') {
+                    layer.alert('Hi，头部工具栏扩展的右侧图标。');
+                }
+            });
+
+
+            table.render({
+                elem: '#demo',
+                toolbar: '#toolbarDemo'
+                //,height: 600
+                ,
+                url: '/api/json/obtain_grades' //数据接口
+                , response: {
+                    statusName: 'code' //规定数据状态的字段名称，默认：code
+                    , statusCode: 200 //规定成功的状态码，默认：0
+                    , msgName: 'message' //规定状态信息的字段名称，默认：msg
+                    , dataName: 'data' //规定数据列表的字段名称，默认：data
+                },
+                page: true //开启分页
+                ,
+                id: 'testReload',
+                cols: [
+                    [ //表头
+                        {
+                            checkbox: true,
+                            fixed: true
+                        },
+                        {
+                        field:'id',
+                        title:'序号',
+                        sort: true
+                    }, {
+                        field: 'name',
+                        title: '姓名',
+                        sort: true
+                    }, {
+                        field: 'studentId',
+                        title: '学号',
+                        sort: true
+                    }, {
+                        field: 'grades',
+                        title: '年级',
+                        sort: true
+                    }, {
+                        field: 'gradesProblem1',
+                        title: '身份证号码',
+                        sort: true
+                    }, {
+                        field: 'gradesProblem2',
+                        title: '选拔赛rank',
+                        sort: true
+                    }, {
+                        fixed: 'right',
+                        width: 150,
+                        align: 'center',
+                        toolbar: '#barDemo'
+                    }
+                    ]
+                ]
+            });
+
+            $('.demoTable .layui-btn').on('click', function () {
+                var type = $(this).data('type');
+                active[type] ? active[type].call(this) : '';
+            });
+
+
+        });
+    </script>
+
 <script>
     //JavaScript代码区域
     layui.use('element', function(){
@@ -27,28 +179,72 @@
             console.log(elem); //得到当前点击的DOM对象
         });
     });
-    layui.use('upload', function(){
+    layui.use('upload', function () {
         var upload = layui.upload;
+
         //执行实例
         var uploadInst = upload.render({
             elem: '#upload_form' //绑定元素
-            ,url: '/upload/' //上传接口
-            ,done: function(res){
-                //上传完毕回调
-                layer.open({
-                   content:'上传成功'
-                });
-            }
-            ,error: function(){
+            ,
+            url: '/api/json/import_select_ranks_via_excel' //上传接口
+            ,
+            accept: 'file',
+            exts: 'xls|xlsx',
+            done: function (res) {
+                if(res.code==200){
+                    layer.msg(res.c, {icon: 6});
+                }
+            },
+            error: function () {
                 //请求异常回调
-                layer.open({
-                    content:'上传失败'
-                });
             }
-            ,accept:'file'
-            ,exts:'xls'
         });
     });
 </script>
 </body>
+<div id="form1" style="padding: 20px; display: none;">
+    <form class="layui-form" id="addform" lay-filter="create">
+        <div class="layui-form-item">
+            <label class="layui-form-label">姓名</label>
+            <div class="layui-input-inline">
+                <input type="text" name="name" id="name" required lay-verify="required" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">学号</label>
+            <div class="layui-input-inline">
+                <input type="text" name="studentId" id="studentId" required lay-verify="required" class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">年级</label>
+            <div class="layui-input-inline">
+                <input type="text" name="grade" id="grade" required lay-verify="required" class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">身份证号码</label>
+            <div class="layui-input-inline">
+                <input type="text" name="gradesProblem1" id="gradesProblem1" required lay-verify="required"
+                       class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">选拔赛rank</label>
+            <div class="layui-input-inline">
+                <input type="text" name="gradesProblem2" id="gradesProblem2" required lay-verify="required"
+                       class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+                <button type="submit" class="layui-btn">提交</button>
+                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            </div>
+        </div>
+    </form>
+</div>
 </html>
