--- a/src/main/resources/templates/association_import_scores.html
+++ b/src/main/resources/templates/association_import_scores.html
@@ -14,7 +14,7 @@
             <button type="submit" class="layui-btn" id="upload_form">
                 <i class="layui-icon">&#xe67c;</i>上传表格
             </button>
-            <a href="../download/format.xls" download="format.xls" class="layui-btn">下载模版</a>
+            <a href="../static/download/format.xls" download="format.xls" class="layui-btn">下载模版</a>
         </div>
     </div>
 
