--- a/src/main/resources/templates/teacher/admin.html
+++ b/src/main/resources/templates/teacher/admin.html
@@ -39,7 +39,7 @@
             <dd><a id="changePassword">更改密码</a></dd>
           </dl>
         </li>
-        <li class="layui-nav-item"><a href="">注销</a></li>
+        <li class="layui-nav-item"><a href="/api/logout">注销</a></li>
       </ul>
     </div>
 
@@ -78,7 +78,7 @@
 
     <div class="layui-body">
       <!-- 内容主体区域 -->
-      <iframe id="childPage" style="width: 100%;height: 99%;" frameborder="0" scrolling="no" src="information.html"></iframe>
+      <iframe id="childPage" style="width: 100%;height: 99%;" frameborder="0" scrolling="no" src="information"></iframe>
     </div>
 
     <div class="layui-footer" style="text-align: center;">
