--- a/src/main/resources/templates/association_change_filter.html
+++ b/src/main/resources/templates/association_change_filter.html
@@ -17,7 +17,7 @@
 
             <form class="layui-form" action="">
                 <div class="layui-form-item">
-                    <label class="layui-form-label">公费人数</label>
+                    <label class="layui-form-label">分数</label>
                     <div class="layui-input-inline">
                         <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
@@ -43,19 +43,7 @@
                 </div>
             </form>
 
-            <form class="layui-form" action="">
-                <div class="layui-form-item">
-                    <label class="layui-form-label">超过平均分</label>
-                    <div class="layui-input-inline">
-                        <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <div class="layui-input-block">
-                        <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
-                    </div>
-                </div>
-            </form>
+
         </div>
     </div>
 
