完成了修改密码

--- a/src/main/resources/templates/teacher/admin.html
+++ b/src/main/resources/templates/teacher/admin.html
@@ -56,9 +56,9 @@
             </dl>
           </li>
           <li class="layui-nav-item ">
-            <a id="scoreCheck">成绩审核</a>
+            <a>成绩审核</a>
             <dl class="layui-nav-child">
-              <dd><a id="">学生个人成绩</a></dd>
+              <dd><a id="scoreCheck">学生个人成绩</a></dd>
               <dd><a id="selectEvent">选拔赛成绩</a></dd>
             </dl>
           </li>
