--- a/src/main/resources/templates/teacher/changePassword.html
+++ b/src/main/resources/templates/teacher/changePassword.html
@@ -13,12 +13,12 @@
     <!-- 内容主体区域 -->
     <div style="padding: 15px;">
         <b id="passModifyMess" style="color: red;"></b>
-        <form class="layui-form" action="">
+        <form class="layui-form" id="changepwd">
 
             <div class="layui-form-item">
                 <label class="layui-form-label">旧密码</label>
                 <div class="layui-input-inline">
-                    <input type="password" name="old_password" required lay-verify="required" autocomplete="off"
+                    <input type="password" name="oldPassword" required lay-verify="required" autocomplete="off"
                            class="layui-input">
                 </div>
             </div>
@@ -26,7 +26,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">新密码</label>
                 <div class="layui-input-inline">
-                    <input type="password" name="new_password" required lay-verify="required" autocomplete="off"
+                    <input type="password" name="password" required lay-verify="check" autocomplete="off"
                            class="layui-input">
                 </div>
             </div>
@@ -56,22 +56,25 @@
         var form = layui.form;
         var $=layui.jquery;
         form.on('submit(formDemo)', function (data) {
-            console.log(data.elem) //被执行事件的元素DOM对象，一般为button对象
-            console.log(data.form) //被执行提交的form对象，一般在存在form标签时才会返回
-            console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
+
             var confirm_password=$("[name=confirm_password]").val();
-            var new_password=$("[name=new_password]").val();
+            var new_password=$("[name=password]").val();
             if(confirm_password == new_password){
-                return true;
+                $.post("/api/json/change_password", $("#changepwd").serialize()
+                    , function (res) {
+                    if(res.code==200){
+                        layer.msg("修改密码成功");
+                    }else {
+                        layer.msg(res.message);
+                    }
+                });
+            }else{
+                layer.msg('两次密码不一致', {
+                    icon: 2,
+                    anim: 6
+                });
             }
-            layer.msg('两次密码不一致', {
-                icon: 2,
-                anim: 6
-            });
-
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
-
-
         });
     });
 </script>
