--- a/src/main/resources/templates/teacher/gradeEvent.html
+++ b/src/main/resources/templates/teacher/gradeEvent.html
@@ -168,6 +168,10 @@
                         field: 'name',
                         title: '姓名',
                         sort: true
+                    },{
+                        field: 'idNo',
+                        title: '身份证号',
+                        sort: true
                     }, {
                         field: 'grades',
                         title: '总分',
