--- a/src/main/resources/templates/teacher/admin.html
+++ b/src/main/resources/templates/teacher/admin.html
@@ -52,7 +52,7 @@
             <dl class="layui-nav-child">
               <dd><a id="ccfEvent">考试录入</a></dd>
               <dd><a id="studentEvent">学生录入</a></dd>
-              <dd><a id="gradeEvent">成绩分析</a></dd>
+              <dd><a id="gradeEvent">成绩录入</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item ">
