修改了协会的更改筛选条件和导入选拔赛成绩，增加了教师端的成绩分析

--- a/src/main/resources/templates/association_import_scores.html
+++ b/src/main/resources/templates/association_import_scores.html
@@ -26,16 +26,31 @@
                 <select id="eid" lay-filter="eid">
                     <option value="1">1</option>
                     <option value="2">2</option>
-                    <option value="3">4</option>
+                    <option value="3">5</option>
+                    <option value="4">4</option>
                     <option value="5">5</option>
                     <option value="6">6</option>
                     <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">15</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+
                 </select>
             </div>
         </div>
         <input type="hidden" id="confirmId">
         <div style="padding-left: 15px">
-            <button type="button" class="layui-btn" id="confirmButton">提交</button>
+            <button type="button" class="layui-btn" id="confirmButton">提交表格</button>
         </div>
 
         </div>
@@ -105,10 +120,6 @@
                                     fixed: true
                                 },
                                 {
-                                    field:'reid',
-                                    title:'序号',
-                                    sort: true
-                                }, {
                                 field: 'name',
                                 title: '姓名',
                                 sort: true
@@ -125,7 +136,7 @@
                                 title: '身份证号码',
                                 sort: true
                             }, {
-                                field: 'rank',
+                                field: 'rankNo',
                                 title: '选拔赛rank',
                                 sort: true
                             }
