--- a/src/main/resources/templates/association_main.html
+++ b/src/main/resources/templates/association_main.html
@@ -21,7 +21,7 @@
                     编程爱好者协会
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">更改密码</a></dd>
+                    <dd><a id="association_change_password">更改密码</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item"><a href="/api/logout">注销</a></li>
