--- a/src/main/resources/templates/teacher/scoreAnalysis.html
+++ b/src/main/resources/templates/teacher/scoreAnalysis.html
@@ -55,7 +55,7 @@
             var myChart = echarts.init(dom);
             var app = {};
             option = null;
-            option = {
+            /*option = {
                 title: {
                     text: '成绩分布图',
                     x: 'center'
@@ -67,14 +67,14 @@
                 legend: {
                     orient: 'vertical',
                     left: 'left',
-                    data: ['50分以下', '50分到100分', '200分到250分', '250分到300分', '300分以上']
+                    data: ['[0,50)','[50,100)','[100,150)','[150,200)','[200,250)','[250,300)','[300,350)','[350,400)','[400,450)','[450,500]']
                 },
                 series: [{
                     name: '成绩分布',
                     type: 'pie',
                     radius: '55%',
                     center: ['50%', '60%'],
-                    data: [],
+                    data: [1,1,1,1,1,1,1,1,1,1],
                     itemStyle: {
                         emphasis: {
                             shadowBlur: 10,
@@ -83,18 +83,42 @@
                         }
                     }
                 }]
-            };
-            if (option && typeof option === "object") {
-                myChart.setOption(option, true);
-            }
+            };*/
+
             $.get('/api/json/stats/grades_value_distribution').done(function (data) {
                 myChart.setOption({
-                    series:[{
-                        field:'',
-                        name:'100分以下'
+                    title: {
+                        text: '成绩分布图',
+                        x: 'center'
+                    },
+                    tooltip: {
+                        trigger: 'item',
+                        formatter: "{a} <br/>{b} : {c} ({d}%)"
+                    },
+                    legend: {
+                        orient: 'vertical',
+                        left: 'left',
+                        data: ['[0,50)','[50,100)','[100,150)','[150,200)','[200,250)','[250,300)','[300,350)','[350,400)','[400,450)','[450,500]']
+                    },
+                    series: [{
+                        name: '成绩分布',
+                        type: 'pie',
+                        radius: '55%',
+                        center: ['50%', '60%'],
+                        data: data.data,
+                        itemStyle: {
+                            emphasis: {
+                                shadowBlur: 10,
+                                shadowOffsetX: 0,
+                                shadowColor: 'rgba(0, 0, 0, 0.5)'
+                            }
+                        }
                     }]
                 });
             });
+            if (option && typeof option === "object") {
+                myChart.setOption(option, true);
+            }
         </script>
         </div>
     </div>
