完善了协会端的选拔赛表格上传部分和教师端的成绩分析部分

--- a/src/main/resources/templates/association_change_filter.html
+++ b/src/main/resources/templates/association_change_filter.html
@@ -19,7 +19,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">分数</label>
                     <div class="layui-input-inline">
-                        <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="input" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -33,7 +33,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">前百分比</label>
                     <div class="layui-input-inline">
-                        <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
+                        <input type="input" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
