--- a/src/main/resources/templates/teacher/scoreAnalysis.html
+++ b/src/main/resources/templates/teacher/scoreAnalysis.html
@@ -43,9 +43,80 @@
     <div class="layui-col-xs12">
         <div class="layui-col-xs4">
             <div style="border: solid 1px black;color: #00F7DE" >
-                <div style="height: 320px">写条件</div>
+                <form class="layui-form" id="dataUpload">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label" style="width: auto">请输入考试批次</label>
+                        <div class="layui-input-inline" style="width: 360px">
+                            <select  id="eidlist" name="eid" lay-filter="eid" lay-verify="required">
+                            </select>
+                        </div>
+                    </div>
+                    <div class="layui-form-item" style="padding-left: 15px">
+                        <button type="button" class="layui-btn" onclick="dataUpload()">确认</button>
+                    </div>
+                </form>
             </div>
         </div>
+        <script>
+            layui.use(['form','layer'], function () {
+                var form = layui.form;
+                var $ =layui.jquery;
+                $.ajax({
+                    url: '/api/json/available_events',
+                    dataType: 'json',
+                    type: 'get',
+                    success: function (res) {
+                        $.each(res.data, function (index, item) {
+                            var text="场次:"+item.examNo +"  开始时间:"+ item.examTime;
+                            $('#eidlist').append(new Option(text, item.eid));// 下拉菜单里添加元素
+                        });
+                        layui.form.render("select");
+                    }
+                });
+            })
+            function dataUpload() {
+                $.post("/api/json/stats/grades_value_distribution", $("#dataUpload").serialize(),
+                    function (data) {
+                        if(data.code==200){
+                            var dom = document.getElementById("container");
+                            var myChart = echarts.init(dom);
+                            myChart.setOption({
+                                title: {
+                                    text: '成绩分布图',
+                                    x: 'center'
+                                },
+                                tooltip: {
+                                    trigger: 'item',
+                                    formatter: "{a} <br/>{b} : {c} ({d}%)"
+                                },
+                                legend: {
+                                    orient: 'vertical',
+                                    left: 'left',
+                                    data: ['[0,50)','[50,100)','[100,150)','[150,200)','[200,250)','[250,300)','[300,350)','[350,400)','[400,450)','[450,500]']
+                                },
+                                series: [{
+                                    name: '成绩分布',
+                                    type: 'pie',
+                                    radius: '55%',
+                                    center: ['50%', '60%'],
+                                    data: data.data,
+                                    itemStyle: {
+                                        emphasis: {
+                                            shadowBlur: 10,
+                                            shadowOffsetX: 0,
+                                            shadowColor: 'rgba(0, 0, 0, 0.5)'
+                                        }
+                                    }
+                                }]
+                            });
+                        }else
+                        {
+                            layer.msg(res.message);
+                        }
+                    });
+            }
+
+        </script>
         <div class="layui-col-xs8">
             <div style="height: 320px">
             <div id="container" style="height: 100%"></div>
@@ -54,38 +125,8 @@
 
             var app = {};
             option = null;
-            /*option = {
-                title: {
-                    text: '成绩分布图',
-                    x: 'center'
-                },
-                tooltip: {
-                    trigger: 'item',
-                    formatter: "{a} <br/>{b} : {c} ({d}%)"
-                },
-                legend: {
-                    orient: 'vertical',
-                    left: 'left',
-                    data: ['[0,50)','[50,100)','[100,150)','[150,200)','[200,250)','[250,300)','[300,350)','[350,400)','[400,450)','[450,500]']
-                },
-                series: [{
-                    name: '成绩分布',
-                    type: 'pie',
-                    radius: '55%',
-                    center: ['50%', '60%'],
-                    data: [1,1,1,1,1,1,1,1,1,1],
-                    itemStyle: {
-                        emphasis: {
-                            shadowBlur: 10,
-                            shadowOffsetX: 0,
-                            shadowColor: 'rgba(0, 0, 0, 0.5)'
-                        }
-                    }
-                }]
-            };*/
-
             $.get('/api/json/stats/grades_value_distribution').done(function (data) {
-                var dom = document.getElementById("container");
+                /*var dom = document.getElementById("container");
                 var myChart = echarts.init(dom);
                 myChart.setOption({
                     title: {
@@ -115,7 +156,7 @@
                             }
                         }
                     }]
-                });
+                });*/
             });
 
         </script>
