--- a/src/main/resources/templates/teacher/scoreAnalysis.html
+++ b/src/main/resources/templates/teacher/scoreAnalysis.html
@@ -261,7 +261,7 @@
                             }
                         },
                         legend: {
-                            data: ['平均分', '最高分', '大于300人数']
+                            data: ['平均分', '最高分', '符合条件的人数']
                         },
                         toolbox: {
                             show: true,
